--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -3,7 +3,7 @@
     background-color: rgb(232, 87, 19);
 }
 
-ul {
+nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -11,11 +11,11 @@ ul {
     background-color: #333;
 }
 
-li {
+nav li {
     float: left;
 }
 
-li a {
+nav li a {
     display: block;
     color: white;
     text-align: center;
@@ -23,10 +23,15 @@ li a {
     text-decoration: none;
 }
 
-li a:hover:not(.active) {
+nav li a:hover:not(.active) {
     background-color: #111;
 }
 
 .active {
     background-color: #4CAF50;
+}
+
+.grade {
+  border: 1px solid black;
+  border-collapse: collapse;
 }
