--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -1,6 +1,6 @@
 .mainheading{
     text-align: center;
-    background-color: #cccccc;
+    background-color: #e6e6e6;
 }
 
 nav ul {
@@ -51,7 +51,7 @@ tr:nth-child(even) {
 }
 
 body {
-    background-color: #f2f2f2;
+    background-color: #ffffff;
 }
 
 #body {
