--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -30,6 +30,7 @@ nav ul {
 
 nav li {
     float: left;
+    
 }
 
 nav li a {
@@ -71,9 +72,6 @@ body {
     background-color: #ffffff;
 }
 
-#body {
-    background-color: #f2f2f2;
-}
 
 btnCalculate {
     background-color: #4CAF50;
@@ -91,9 +89,10 @@ h2{
     color: #ffffff
 }
 
-#ebus1 {
-    display: table-cell;
-   text-align: center;
-   vertical-align: middle;
+#maintext {
+    padding-left:200px;
+    border-style: solid;
+    border-width: 2px;
 }
+
 
