--- a/Interests/interest_pages.css
+++ b/Interests/interest_pages.css
@@ -1,8 +1,8 @@
 #section1{
-    background-color: rgb(238, 0, 90);
+    background-image:url("http://www.spain.info/export/sites/spaininfo/comun/carrusel-recursos/cataluna/barcelona-000037111798-istock.jpg_369272544.jpg");
 }
 #section2{
-    background-color: rgb(7, 188, 86);
+    background-image:url("http://www.spain.info/export/sites/spaininfo/comun/carrusel-recursos/cataluna/barcelona-000037111798-istock.jpg_369272544.jpg");
 }
 #section3{
     background-color: rgb(20, 165, 232);
