--- a/Interests/interest_pages.css
+++ b/Interests/interest_pages.css
@@ -1,5 +1,5 @@
 #section1{
-    background-image:url("http://www.spain.info/export/sites/spaininfo/comun/carrusel-recursos/cataluna/barcelona-000037111798-istock.jpg_369272544.jpg");
+    background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQuHbeD6ws5_tfIH4ZVJKd_RuT9dbWyJ20-c60hFFFsW6oxw1RQw");
     background-repeat: no-repeat;
     background-size: cover; 
     background-position: center center;
