--- a/Interests/interest_pages.css
+++ b/Interests/interest_pages.css
@@ -1,21 +1,22 @@
 #section1{
-    background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQuHbeD6ws5_tfIH4ZVJKd_RuT9dbWyJ20-c60hFFFsW6oxw1RQw");
+    background-image:url("http://www.spain.info/export/sites/spaininfo/comun/carrusel-recursos/cataluna/barcelona-000037111798-istock.jpg_369272544.jpg");
     background-repeat: no-repeat;
-    
+    background-size: cover;
+    background-position: center center;
+    text-align: center;
 }
 #section2{
     background-image:url("https://cdn5.tropicalsky.co.uk/images/970x340/usa-multi-centres.jpg");
-    background-repeat: no-repeat;
-    
+    background-repeat:no-repeat;
+    background-size: cover;
+    background-position: center center;
+    text-align: center;
 }
 #section3{
-    background-image: url("http://innovationdublin.ie/wp-content/uploads/2017/02/cropped-Innovation-Dublin.jpg");
-    background-repeat: no-repeat;
-    
+    background-color: rgb(20, 165, 232);
 }
 .section{
     text-align:  center;
     color: white;
-    font-size: 10px;
 }
 
