--- a/Interests/interest_pages.css
+++ b/Interests/interest_pages.css
@@ -1,5 +1,5 @@
 #section1{
-    background-image:url("http://www.spain.info/export/sites/spaininfo/comun/carrusel-recursos/cataluna/barcelona-000037111798-istock.jpg_369272544.jpg");
+    background-image:url("http://www.citylifebarcelona.com/wp-content/uploads/barcelona1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
