--- a/Interests/interest_pages.css
+++ b/Interests/interest_pages.css
@@ -18,9 +18,14 @@
     background-size: cover;
     background-position: center center;
     text-align: center;
+    
 }
 .section{
+    font-weight: bolder;
     text-align:  center;
     color: white;
+    font-size:200%;
+    text-shadow: 2px 2px 4px #000000;
+    
 }
 
