--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -82,8 +82,6 @@ btnCalculate {
 
     
 }
-
-
        
 h2{
     text-align:center;
@@ -94,6 +92,7 @@ h2{
 #maintext {
     text-align: center;
     color: black;
+    
 }
 
 #mainbody {
@@ -120,3 +119,27 @@ h2{
     text-align:left;
     margin-left: 25%;
 }
+
+#products{
+    text-align:left;
+    margin-left: 25%;
+}
+
+#cloud{
+    width:200px;
+    height:150px;
+}
+
+p{
+     font-family: Arial, Helvetica, sans-serif;
+}
+#image{
+    margin-left: 35%;
+    top:200px;
+    
+}
+
+#container{
+    float:left;
+}
+
