--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -79,8 +79,10 @@ btnCalculate {
 
 #formstyling {
     width: 300px ;
+    margin:auto;
   margin-left: auto ;
   margin-right: auto ;
+  text-align: center;
 
 }
        
@@ -144,3 +146,20 @@ p{
     float:left;
 }
 
+.calc{
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    background-color: white; 
+    
+    border: 2px solid #4CAF50;
+}
+
+.calc:hover {
+    background-color: #4CAF50;
+    color: white;
+}
