--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -147,19 +147,35 @@ p{
 }
 
 .calc{
-    color: white;
-    padding: 16px 32px;
+    color: black;
+    padding: 8px 16px;
     text-align: center;
-    font-size: 16px;
+    font-size: 12px;
     margin: 4px 2px;
     transition-duration: 0.4s;
     cursor: pointer;
     background-color: white; 
-    
     border: 2px solid #4CAF50;
 }
 
 .calc:hover {
     background-color: #4CAF50;
+    color: white;
+}
+
+.btnProceed{
+    color: black;
+    padding: 8px 16px;
+    text-align: center;
+    font-size: 12px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    background-color: white; 
+    border: 2px solid #4CAF50;
+}
+
+.btnProceed:hover {
+    background-color: #f44336;
     color: white;
 }
