--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -172,7 +172,7 @@ p{
     transition-duration: 0.4s;
     cursor: pointer;
     background-color: white; 
-    border: 2px solid #4CAF50;
+    border: 2px solid #f44336;
 }
 
 .btnProceed:hover {
