--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -79,10 +79,8 @@ btnCalculate {
 
 #formstyling {
     width: 300px ;
-    margin:auto;
-  margin-left: auto ;
-  margin-right: auto ;
-  text-align: center;
+    
+  vertical-align: middle;
 
 }
        
@@ -136,10 +134,12 @@ h2{
 p{
      font-family: Arial, Helvetica, sans-serif;
 }
+
 #image{
-    margin-left: 35%;
-    top:200px;
-    
+     
+    position: absolute;
+    right: 25%;
+  
 }
 
 #container{
@@ -163,7 +163,7 @@ p{
     color: white;
 }
 
-.btnProceed{
+#btnProceed{
     color: black;
     padding: 8px 16px;
     text-align: center;
@@ -175,7 +175,8 @@ p{
     border: 2px solid #f44336;
 }
 
-.btnProceed:hover {
+#btnProceed:hover {
     background-color: #f44336;
     color: white;
 }
+
