--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -79,8 +79,10 @@ btnCalculate {
 
 #formstyling {
     width: 300px ;
-    
-  vertical-align: middle;
+    margin:auto;
+    margin-left: auto ;
+    margin-right: auto ;
+    vertical-align: middle;
 
 }
        
