--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -182,3 +182,15 @@ p{
     color: white;
 }
 
+.clear{color: black;
+    padding: 8px 16px;
+    text-align: center;
+    font-size: 12px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+     background-color: white;
+    border: 2px solid #555555;
+}
+
+
