--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -207,7 +207,7 @@ p{
     border: 2px solid #f44336;
 }
 
-#btnPuchase:hover {
+#btnPuchase.active {
     background-color: #f44336;
     color: white;
 }
@@ -221,4 +221,5 @@ p{
     transition-duration: 0.4s;
     cursor: pointer;
     border: 2px solid #008CBA;
+    background-color: #008CBA;
 }
