--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -4,17 +4,12 @@
     color: #ffffff;
     margin-top:0px;
 }
+
 .header img {
   float: left;
   width: 100px;
   height: 100px;
   background: #555;
-}
-
-.header h1 {
-  position: relative;
-  top: 18px;
-  left: 10px;
 }
 
 nav ul li:last-child {
@@ -104,8 +99,7 @@ h2{
   font-family: Arial, Helvetica, sans-serif;
  }
  
- #wrapper
-{
+#wrapper{
 	margin-left:auto;
 	margin-right:auto;
 	width:970px;
@@ -142,14 +136,12 @@ h2{
 }
 
 p{
-     font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #image{
-     
     position: absolute;
     right: 25%;
-  
 }
 
 #container{
