--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -64,10 +64,6 @@ tr:nth-child(even) {
     text-decoration: underline;
 }
 
-body {
-    background-color: #b30000;
-}
-
 
 btnCalculate {
     background-color: #4CAF50;
@@ -247,16 +243,17 @@ p{
     color: black;
     padding: 8px 16px;
     text-align: center;
-    font-size: 20px;
+    font-size:30px;
     margin: 4px 2px;
     transition-duration: 0.4s;
     cursor: pointer;
     background-color: white; 
-    border: 2px solid #008CBA;
+    border: 2px solid #f44336;
+    
 }
     
 .btnShop:hover{
-    background-color: #008CBA;
+    background-color: #f44336;
     color: white;
 }
 
