--- a/Interests/cloudInfo.css
+++ b/Interests/cloudInfo.css
@@ -1,8 +1,10 @@
 
+/*CSS for pagepilling*/
 #section4{
     background-color:#ccccff;
 }    
 
+/*Position of button*/
 .shopButton{
     text-align: center;
 }
