--- a/Interests/interest_pages.css
+++ b/Interests/interest_pages.css
@@ -1,3 +1,5 @@
+
+/*CSS for pagepilling*/
 #section1{
     background-image:url("http://www.citylifebarcelona.com/wp-content/uploads/barcelona1.jpg");
     background-repeat: no-repeat;
