--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -1,3 +1,5 @@
+
+/*Heading design*/
 .mainheading{
     text-align: center;
     background-color: #00001a;
@@ -12,6 +14,7 @@
   background: #555;
 }
 
+/*Nav Bar design*/
 nav ul li:last-child {
     float: right;
 }
@@ -50,6 +53,7 @@ nav li a:hover:not(.active) {
   border-collapse: collapse;
 }
 
+/*Designing the table*/
 tr, td, th {
     border: 1px solid black;
   border-collapse: collapse;
@@ -64,11 +68,7 @@ tr:nth-child(even) {
     text-decoration: underline;
 }
 
-
-btnCalculate {
-    background-color: #4CAF50;
-}
-
+/*Designing forms*/
 #formstyling {
     width: 300px ;
     margin:auto;
@@ -78,23 +78,20 @@ btnCalculate {
 
 }
        
-h2{
-    text-align:center;
-    background-color: #00001a;
-    color: #ffffff
-}
-
+/*Design of main text*/
 #maintext {
     text-align: center;
     color: black;
     
 }
 
+/*Design of main body*/
 #mainbody {
   background-color: #ccccff;
   font-family: Arial, Helvetica, sans-serif;
  }
  
+/*Design of wrapper around main text*/
 #wrapper{
 	margin-left:auto;
 	margin-right:auto;
@@ -106,6 +103,8 @@ h2{
 	box-shadow: 10px 10px 5px grey;
 }
 
+
+/*Positioning of list items*/
 #duties{
     text-align:left;
     margin-left: 25%;
@@ -126,24 +125,24 @@ h2{
     margin-left: 25%;
 }
 
+/*Image design*/
 #cloud{
     width:200px;
     height:150px;
 }
 
-p{
-    font-family: Arial, Helvetica, sans-serif;
-}
-
+/*Image positioning*/
 #image{
     position: absolute;
     right: 25%;
 }
 
+/*Position of a div tag*/
 #container{
     float:left;
 }
 
+/*Design of the buttons*/
 .btnCalc{
     color: black;
     padding: 8px 16px;
@@ -265,6 +264,7 @@ p{
     float: right;
 }
 
+/*Positionig of resources*/
 #resources{
     font-size: 12px;
     margin-bottom: -45px;
