--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -172,6 +172,11 @@ tr:nth-child(even) {
     border: 2px solid #f44336;
 }
 
+#btnProceed:disabled{
+    opacity: 0.6;
+    cursor: not-allowed;
+}
+
 #btnProceed:hover {
     background-color: #f44336;
     color: white;
