--- a/Interests/cloudInfo.css
+++ b/Interests/cloudInfo.css
@@ -1,7 +1,7 @@
 
 /*CSS for pagepilling*/
 #section4{
-    background-color:#ccccff;
+    background-color:#ccddff;
 }    
 
 /*Position of button*/
