--- a/Interests/cloudInfo.css
+++ b/Interests/cloudInfo.css
@@ -25,7 +25,6 @@
     text-decoration: none;
 }
 
-.mainbody{
-    background-color:#ccddff;
-    font-family: Arial, Helvetica, sans-serif;
- }
+.section{
+   background-color:#e6eeff;
+}
